--- a/imagey-web/index.html
+++ b/imagey-web/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="imagey.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Imagey</title>
+    <style>
+      html, body, h1, h2, h3, h4, h5 {font-family: "Open Sans", sans-serif}
+    </style>
   </head>
   <body>
     <div id="root"></div>
